# latex-viitteet

./: .coveragerc  .env  .gitignore  .pylintrc  DoD.md  LICENSE  README.md  app.py  pyproject.toml  retro.md  routes.py  run_app.sh  run_robot_tests.sh  run_robot_tests_ci.sh  schema.sql  tasks.py
.github/workflows/: main.yml  postgres_test.yml  robot.yml
documents/: kayttoohje.md  loppuraportti.md
src/: Library.py  library.py
src/bibtex/: bibtex_creator.py
src/entities/: citation.py  user.py
src/flask/: app.py  entries.py  routes.py
src/flask/templates/: add_book.html  add_new.html  add_new_book.html  error.html  index.html  layout.html  list.html
src/flaskapp/: app.py  entries.py  routes.py  validator.py
src/flaskapp/entities/: __init__.py  citation.py
src/flaskapp/repositories/: __init__.py  citation_repository.py
src/flaskapp/services/: __init__.py
src/flaskapp/static/: main.css
src/flaskapp/templates/: add_new_article.html  add_new_book.html  add_new_inproceedings.html  error.html  index.html  layout.html  list.html  login.html  register.html
src/repositories/: citation_repository.py  user_repository.py
src/services/: citation_service.py  citationservice.py  user_crypto_service.py  user_service.py  user_session_service.py
src/tests/: add_article.robot  add_book.robot  add_inproceedings.robot  bibtex_example.bib  citation_list.robot  login.robot  logout.robot  main.robot  register.robot  resource.robot  test_bibtex_creator.py  test_citation.py  test_user_object.py  test_user_service.py  test_validator_test.py  validation_unittest.py
src/tests/robot/: add_article.robot  add_book.robot  add_inproceedings.robot  citation_list.robot  (+5 more)
(+5 files in other folders)
