[tool.poetry]
name = "latex-viitteet"
version = "0.1.0"
description = ""
authors = ["Mira <mira.tihverainen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.0"
pytest = "^7.4.3"
flask-login = "^0.6.3"
bcrypt = "^4.1.1"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
robotframework = "^6.1.1"
requests = "^2.31.0"
robotframework-seleniumlibrary = "^6.1.3"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
